--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -1,1 +1,36 @@
-<p>sign-up works!</p>
+<div class="center-container">
+    <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+        <div class="text-center mb-5">
+            <img src="assets/img/pentagon_64.png" alt="Image" height="50" class="mb-3">
+            <div class="text-900 text-3xl font-medium mb-3">Billio Budgeting App</div>
+            <span class="text-600 font-medium line-height-3 text-blue-500">Create your account to get started</span>
+        </div>
+    
+        <div>
+            <label for="firstname" class="block text-900 font-medium mb-2">First Name</label>
+            <input id="firstname" type="text" placeholder="First Name" pInputText class="w-full mb-3">
+
+            <label for="surname" class="block text-900 font-medium mb-2">Surname</label>
+            <input id="surname" type="text" placeholder="Surname" pInputText class="w-full mb-3">
+
+            <label for="email1" class="block text-900 font-medium mb-2">Email</label>
+            <input id="email1" type="text" placeholder="Email address" pInputText class="w-full mb-3">
+    
+            <label for="password1" class="block text-900 font-medium mb-2">Password</label>
+            <input id="password1" type="password" placeholder="Password" pInputText class="w-full mb-3">
+
+            <label for="password2" class="block text-900 font-medium mb-2">Confirm Password</label>
+            <input id="password2" type="password" placeholder="Confirm Password" pInputText class="w-full mb-3">
+    
+            <div class="flex align-items-center justify-content-between mb-6">
+                <div class="flex align-items-center">
+                    <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
+                    <label for="rememberme1" class="text-900">Remember me</label>
+                </div>
+                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
+            </div>
+    
+            <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full"></button>
+        </div>
+    </div>
+  </div>
