auth pages routing updated

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
             <img src="assets/img/pentagon_64.png" alt="Image" height="50" class="mb-3">
             <div class="text-900 text-3xl font-medium mb-3">Welcome Back</div>
             <span class="text-600 font-medium line-height-3">Don't have an account?</span>
-            <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer">Create today!</a>
+            <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer" [routerLink]="['/auth/sign-up']">Create today!</a>
         </div>
     
         <div>
@@ -19,10 +19,11 @@
                     <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
                     <label for="rememberme1" class="text-900">Remember me</label>
                 </div>
-                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer">Forgot password?</a>
+                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer" [routerLink]="['/auth/forgot-password']">Forgot password?</a>
             </div>
     
             <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full"></button>
+            
         </div>
     </div>
   </div>
