--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,1 +1,21 @@
-<p>forgot-password works!</p>
+<div class="center-container">
+    <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
+        <div class="text-center mb-5">
+            <img src="assets/img/pentagon_64.png" alt="Image" height="50" class="mb-3">
+            <div class="text-900 text-3xl font-medium mb-3">Billio Budgeting App</div>
+            <span class="text-600 font-medium line-height-3 text-blue-500">Reset Password</span>
+        </div>
+    
+        <div>
+
+            <label for="email1" class="block text-900 font-medium mb-2">Email</label>
+            <input id="email1" type="text" placeholder="Email address" pInputText class="w-full mb-3">
+    
+            <button pButton pRipple label="Reset Password" icon="pi pi-user" class="w-full"></button>
+
+            <div class="flex align-items-center justify-content-between mb-6">
+                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer top-space" [routerLink]="['/auth/login']">Rembered Password? Login</a>
+            </div>
+        </div>
+    </div>
+  </div>
