--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,23 +7,53 @@
             <a class="font-medium no-underline ml-2 text-blue-500 cursor-pointer" [routerLink]="['/auth/sign-up']">Create today!</a>
         </div>
     
-        <div>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
             <label for="email1" class="block text-900 font-medium mb-2">Email</label>
-            <input id="email1" type="text" placeholder="Email address" pInputText class="w-full mb-3">
+            <input id="email1" 
+                   type="email" 
+                   formControlName="email"
+                   placeholder="Email address" 
+                   pInputText 
+                   class="w-full mb-1"
+                   [ngClass]="{'ng-invalid ng-dirty': submitted && loginForm.get('email')?.errors}">
+            <small class="p-error block mb-3" *ngIf="submitted && loginForm.get('email')?.errors">
+                <span *ngIf="loginForm.get('email')?.errors?.['required']">Email is required.</span>
+                <span *ngIf="loginForm.get('email')?.errors?.['email']">Please enter a valid email address.</span>
+            </small>
     
             <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-            <input id="password1" type="password" placeholder="Password" pInputText class="w-full mb-3">
+            <input id="password1" 
+                   type="password" 
+                   formControlName="password"
+                   placeholder="Password" 
+                   pInputText 
+                   class="w-full mb-1"
+                   [ngClass]="{'ng-invalid ng-dirty': submitted && loginForm.get('password')?.errors}">
+            <small class="p-error block mb-3" *ngIf="submitted && loginForm.get('password')?.errors">
+                <span *ngIf="loginForm.get('password')?.errors?.['required']">Password is required.</span>
+                <span *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long.</span>
+            </small>
     
             <div class="flex align-items-center justify-content-between mb-6">
                 <div class="flex align-items-center">
-                    <p-checkbox id="rememberme1" [binary]="true" styleClass="mr-2"></p-checkbox>
+                    <p-checkbox id="rememberme1" 
+                              formControlName="rememberMe"
+                              [binary]="true" 
+                              styleClass="mr-2">
+                    </p-checkbox>
                     <label for="rememberme1" class="text-900">Remember me</label>
                 </div>
-                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer" [routerLink]="['/auth/forgot-password']">Forgot password?</a>
+                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer" 
+                   [routerLink]="['/auth/forgot-password']">Forgot password?</a>
             </div>
     
-            <button pButton pRipple label="Sign In" icon="pi pi-user" class="w-full"></button>
-            
-        </div>
+            <button pButton 
+                    pRipple 
+                    type="submit"
+                    label="Sign In" 
+                    icon="pi pi-user" 
+                    class="w-full">
+            </button>
+        </form>
     </div>
-  </div>
+</div>
