login password toggle sorted

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -22,13 +22,22 @@
             </small>
     
             <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-            <input id="password1" 
-                   type="password" 
-                   formControlName="password"
-                   placeholder="Password" 
-                   pInputText 
-                   class="w-full mb-1"
-                   [ngClass]="{'ng-invalid ng-dirty': submitted && loginForm.get('password')?.errors}">
+            <div class="p-inputgroup mb-1">
+                <input id="password1" 
+                       [type]="showPassword ? 'text' : 'password'"
+                       formControlName="password"
+                       placeholder="Password" 
+                       pInputText 
+                       class="w-full"
+                       [ngClass]="{'ng-invalid ng-dirty': submitted && loginForm.get('password')?.errors}">
+                <button type="button" 
+                        pButton 
+                        pRipple 
+                        icon="pi {{showPassword ? 'pi-eye-slash' : 'pi-eye'}}" 
+                        class="p-button-outlined"
+                        (click)="togglePasswordVisibility()">
+                </button>
+            </div>
             <small class="p-error block mb-3" *ngIf="submitted && loginForm.get('password')?.errors">
                 <span *ngIf="loginForm.get('password')?.errors?.['required']">Password is required.</span>
                 <span *ngIf="loginForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long.</span>
