--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -6,16 +6,32 @@
             <span class="text-600 font-medium line-height-3 text-blue-500">Reset Password</span>
         </div>
     
-        <div>
-
+        <form [formGroup]="resetForm" (ngSubmit)="onSubmit()">
             <label for="email1" class="block text-900 font-medium mb-2">Email</label>
-            <input id="email1" type="text" placeholder="Email address" pInputText class="w-full mb-3">
+            <input id="email1" 
+                   type="email" 
+                   formControlName="email"
+                   placeholder="Email address" 
+                   pInputText 
+                   class="w-full mb-1"
+                   [ngClass]="{'ng-invalid ng-dirty': (submitted || resetForm.get('email')?.touched) && resetForm.get('email')?.errors}">
+            <small class="p-error block mb-3" *ngIf="(submitted || resetForm.get('email')?.touched) && resetForm.get('email')?.errors">
+                <span *ngIf="resetForm.get('email')?.errors?.['required']">Email is required.</span>
+                <span *ngIf="resetForm.get('email')?.errors?.['email']">Please enter a valid email address.</span>
+            </small>
     
-            <button pButton pRipple label="Reset Password" icon="pi pi-user" class="w-full"></button>
+            <button pButton 
+                    pRipple 
+                    type="submit"
+                    label="Reset Password" 
+                    icon="pi pi-user" 
+                    class="w-full">
+            </button>
 
             <div class="flex align-items-center justify-content-between mb-6">
-                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer top-space" [routerLink]="['/auth/login']">Rembered Password? Login</a>
+                <a class="font-medium no-underline ml-2 text-blue-500 text-right cursor-pointer top-space" 
+                   [routerLink]="['/auth/login']">Remembered Password? Login</a>
             </div>
-        </div>
+        </form>
     </div>
-  </div>
+</div>
