--- a/src/app/auth/sign-up/sign-up.component.html
+++ b/src/app/auth/sign-up/sign-up.component.html
@@ -45,32 +45,52 @@
                 <span *ngIf="signupForm.get('email')?.errors?.['required']">Email is required.</span>
                 <span *ngIf="signupForm.get('email')?.errors?.['email']">Please enter a valid email address.</span>
             </small>
-    
+
             <label for="password1" class="block text-900 font-medium mb-2">Password</label>
-            <input id="password1" 
-                   type="password" 
-                   formControlName="password"
-                   placeholder="Password" 
-                   pInputText 
-                   class="w-full mb-1"
-                   [ngClass]="{'ng-invalid ng-dirty': (submitted || signupForm.get('password')?.touched) && signupForm.get('password')?.errors}">
-            <small class="p-error block mb-3" *ngIf="(submitted || signupForm.get('password')?.touched) && signupForm.get('password')?.errors">
+            <div class="p-inputgroup mb-1">
+                <input id="password1" 
+                       [type]="showPassword ? 'text' : 'password'"
+                       formControlName="password"
+                       placeholder="Password" 
+                       pInputText 
+                       class="w-full"
+                       [ngClass]="{'ng-invalid ng-dirty': submitted && signupForm.get('password')?.errors}">
+                <button type="button" 
+                        pButton 
+                        pRipple 
+                        icon="pi {{showPassword ? 'pi-eye-slash' : 'pi-eye'}}" 
+                        class="p-button-outlined"
+                        (click)="togglePasswordVisibility()">
+                </button>
+            </div>
+            <small class="p-error block mb-3" *ngIf="submitted && signupForm.get('password')?.errors">
                 <span *ngIf="signupForm.get('password')?.errors?.['required']">Password is required.</span>
                 <span *ngIf="signupForm.get('password')?.errors?.['minlength']">Password must be at least 6 characters long.</span>
-            </small>
+            </small>    
 
             <label for="password2" class="block text-900 font-medium mb-2">Confirm Password</label>
-            <input id="password2" 
-                   type="password" 
-                   formControlName="confirmPassword"
-                   placeholder="Confirm Password" 
-                   pInputText 
-                   class="w-full mb-1"
-                   [ngClass]="{'ng-invalid ng-dirty': (submitted || signupForm.get('confirmPassword')?.touched) && signupForm.get('confirmPassword')?.errors}">
-            <small class="p-error block mb-3" *ngIf="(submitted || signupForm.get('confirmPassword')?.touched) && signupForm.get('confirmPassword')?.errors">
+            <div class="p-inputgroup mb-1">
+                <input id="password2" 
+                       [type]="showConfirmPassword ? 'text' : 'password'"
+                       formControlName="confirmPassword"
+                       placeholder="Confirm Password"
+                       pInputText 
+                       class="w-full"
+                       [ngClass]="{'ng-invalid ng-dirty': (submitted || signupForm.get('confirmPassword')?.touched) && signupForm.get('confirmPassword')?.errors}">
+                <button type="button" 
+                        pButton 
+                        pRipple 
+                        icon="pi {{showPassword ? 'pi-eye-slash' : 'pi-eye'}}" 
+                        class="p-button-outlined"
+                        (click)=" toggleConfirmPasswordVisibility()">
+                </button>
+            </div>
+            <small class="p-error block mb-3" *ngIf="submitted && signupForm.get('confirmPassword')?.errors">
                 <span *ngIf="signupForm.get('confirmPassword')?.errors?.['required']">Please confirm your password.</span>
+                <span *ngIf="signupForm.get('confirmPassword')?.errors?.['minlength']">Password must be at least 6 characters long.</span>
                 <span *ngIf="signupForm.get('confirmPassword')?.errors?.['passwordMismatch']">Passwords do not match.</span>
-            </small>
+            </small>    
+
             <br>
             <div class="top-space">
                 <button pButton 
